--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
-      run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      run: npm --prefix ./api install
+    - run: npm --prefix ./api run build --if-present
+    - run: npm --prefix ./api test
       env:
         CI: true
