Setup github workflow nodejs

--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,12 @@
 {
-  "name":  "rapidguestregistration-openapi-3-0",
+  "name": "rapidguestregistration-openapi-3-0",
   "version": "3.0.2",
   "description": "This is the RapidGuestRegistration API, used for everything from creating tables to managing users, as well as registering for guests.",
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "keywords": [
     "openapi-generator",
