--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,8 +1,9 @@
 // Use this file as a starting point for your project's .eslintrc.
 // Copy this file, and add rule overrides as needed.
 {
-  "extends": "airbnb-base",
-  "rules": {
-    "no-console": "off"
-  }
+  //"default": "off"//,
+  //"extends": "airbnb-base",
+  //"rules": {
+  //  "no-console": "off"
+  //}
 }
