--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "npm install",
     "start": "node index.js",
-    "test": "mocha"
+    "test": "jest"
   },
   "keywords": [
     "openapi-generator",
@@ -34,6 +34,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.17.2",
+    "jest": "^26.6.3",
     "mocha": "^7.1.1"
   },
   "eslintConfig": {
