add user interface for locations.

--- a/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
+++ b/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RapidGuestRegistration.Client\src\RapidGuestRegistration.Client\RapidGuestRegistration.Client.csproj" />
+  </ItemGroup>
+
 </Project>
