--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.Development.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.Development.json
@@ -6,6 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "RedirectHttpToHttps": "false",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "api": {
     "mode": "mock"
