update appsettings to be usable with docker.

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
@@ -17,6 +17,6 @@
   "AllowedHosts": "*",
   "api": {
     "mode": "production",
-    "baseUrl": "http://localhost:8080"
+    "baseUrl": "http://api:8080"
   }
 }
