--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.17.2",
     "jest": "^26.6.3",
+    "jest-each": "^26.6.2",
     "mocha": "^7.1.1"
   },
   "eslintConfig": {
