--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "npm install",
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "keywords": [
     "openapi-generator",
