--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "node index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development node index.js",
     "test": "NODE_ENV=test jest --runInBand",
     "sync": "node ./core/sync_models.js"
   },
@@ -28,6 +29,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0",
     "swagger-ui-express": "^4.0.2",
     "winston": "^3.2.1"
   },
