--- a/api/package.json
+++ b/api/package.json
@@ -42,7 +42,8 @@
     "eslint-plugin-import": "^2.17.2",
     "jest": "^26.6.3",
     "jest-each": "^26.6.2",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "sequelize-cli": "^6.2.0"
   },
   "eslintConfig": {
     "env": {
