--- a/.github/workflows/api-integration-test.yml
+++ b/.github/workflows/api-integration-test.yml
@@ -9,3 +9,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Check if docker-compose is available.
       run: docker-compose --version
+    - name: Build images
+      run: docker-compose -f docker-compose.integration-test.yml build
+    - name: Run services and tests
+      run: docker-compose -f docker-compose.integration-test.yml up --exit-code-from api-test
