--- a/docker-compose.integration-test.yml
+++ b/docker-compose.integration-test.yml
@@ -6,6 +6,9 @@ services:
       - 8080:8080
   api-test:
     build: ./api
+    environment:
+      - DB_HOSTNAME=postgres
+      - DB_PORT=5051
     command: npm test
   ui:
     build: ./RapidGuestRegistration/
