--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node index.js",
     "test": "NODE_ENV=test jest --runInBand",
+    "integrationtest": "NODE_ENV=staging npm run sync && jest --runInBand --coverage",
     "sync": "node ./core/sync_models.js"
   },
   "keywords": [
