--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node index.js",
     "test": "NODE_ENV=test jest --runInBand",
-    "integrationtest": "NODE_ENV=staging npm run sync && jest --runInBand --coverage",
+    "integrationtest": "bash ../execute-integration-tests.bash",
     "sync": "node ./core/sync_models.js"
   },
   "keywords": [
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-openapi-validator": "^3.9.1",
+    "jest-cli": "^26.6.3",
     "js-yaml": "^3.3.0",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
@@ -35,7 +36,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.16.0",
