changed rel. dir path of bash-script

--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node index.js",
     "test": "NODE_ENV=test jest --runInBand",
-    "integrationtest": "bash ../execute-integration-tests.bash",
+    "integrationtest": "bash ./execute-integration-tests.bash",
     "sync": "node ./core/sync_models.js"
   },
   "keywords": [
