fixed path errors in execute-integration-tests.bash

--- a/docker-compose.integration-test.yml
+++ b/docker-compose.integration-test.yml
@@ -1,8 +1,10 @@
 version: "3.5"
 services:
   api-test:
+    container_name: api_test_container
     build: ./api
     command: npm run integrationtest
+    #command: sleep infinity
     depends_on: 
       - postgres
   postgres:
