--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "prestart": "npm install",
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node index.js",
-    "test": "NODE_ENV=test jest --runInBand --coverage",
+    "test": "NODE_ENV=test jest --runInBand --coverage --group=-integrationtest",
     "integrationtest": "pwd && bash ./script/execute-integration-tests.bash",
     "sync": "node ./core/sync_models.js"
   },
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "express-openapi-validator": "^3.9.1",
     "jest-cli": "^26.6.3",
+    "jest-runner-groups": "^2.0.1",
     "js-yaml": "^3.3.0",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
