--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
@@ -18,5 +18,9 @@
   "api": {
     "mode": "production",
     "baseUrl": "http://api:8080"
+  },
+  
+  "registration": {
+    "baseUrl": "http://localhost:5000"
   }
 }
