--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -20,6 +20,6 @@ jobs:
       - name: Install dependencies
         run: npm --prefix ./api install
       - run: npm --prefix ./api run build --if-present
-      - run: npm -prefix ./api test
+      - run: npm -prefix ./api test && exit 0
         env:
           CI: true
