--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "prestart": "npm install",
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node index.js",
-    "test": "NODE_ENV=test jest --runInBand --coverage --group=-integrationtest",
+    "test": "bash ./script/execute-unit-tests.bash",
     "integrationtest": "bash ./script/execute-integration-tests.bash",
     "sync": "node ./core/sync_models.js"
   },
