--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "camelcase": "^5.3.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "excel4node": "^1.7.2",
     "express": "^4.16.4",
     "express-openapi-validator": "^3.9.1",
     "jest-cli": "^26.6.3",
