--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.5"
 services:
   api:
     build: ./api/
+    environment:
+      - NODE_ENV=staging
     ports:
       - 8080:8080
   ui:
