--- a/RapidGuestRegistration/RapidGuestRegistration.Client/src/RapidGuestRegistration.Client/RapidGuestRegistration.Client.csproj
+++ b/RapidGuestRegistration/RapidGuestRegistration.Client/src/RapidGuestRegistration.Client/RapidGuestRegistration.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -24,6 +24,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
     <PackageReference Include="Polly" Version="7.2.0" />
+    <PackageReference Include="Syncfusion.Blazor.HeatMap" Version="18.4.0.43" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 
