--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="Syncfusion.Blazor.HeatMap" Version="18.4.0.43" />
   </ItemGroup>
 
 </Project>
