--- a/RapidGuestRegistration/Dockerfile
+++ b/RapidGuestRegistration/Dockerfile
@@ -7,6 +7,7 @@ RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+RUN apt-get update && apt-get install -y libgdiplus
 WORKDIR /app
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "RapidGuestRegistration.Ui.dll"]
