--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.11" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="Syncfusion.Blazor.HeatMap" Version="18.4.0.43" />
   </ItemGroup>
 
   <ItemGroup>
