update csproj to remove non-supported attribute.

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/RapidGuestRegistration.Ui.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
+    <None Update="app.db" CopyToOutputDirectory="PreserveNewest"/>
   </ItemGroup>
 
   <ItemGroup>
