--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
@@ -12,7 +12,7 @@
   "AllowedHosts": "*",
   "api": {
     "mode": "production",
-    "baseUrl": "http://api:8080"
+    "baseUrl": "http://localhost:8080"
   },
   "registration": {
     "baseUrl": "http://localhost:5000"
