update docker-compose file with correct hostname + update jmeter test with correct hostname

--- a/docker-compose.integration-test.yml
+++ b/docker-compose.integration-test.yml
@@ -4,7 +4,7 @@ services:
     container_name: api_test_container
     build: ./api
     command: npm run integrationtest
-    hostname: postgres
+    hostname: api
     #command: sleep infinity
     depends_on: 
       - postgres
