Nur noch defaultuser

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
@@ -16,5 +16,9 @@
   },
   "registration": {
     "baseUrl": "http://localhost:5000"
+  },
+  "DefaultUser": {
+    "Email": "admin@email.com",
+    "Password": "Admin123!"
   }
 }
