added docker-compose down

--- a/.github/workflows/api-integration-test.yml
+++ b/.github/workflows/api-integration-test.yml
@@ -25,3 +25,5 @@ jobs:
       with:
         name: jmeter-report
         path: api/reports/*
+    - name: Shut down docker containers
+      run: docker-compose down
