--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Properties/launchSettings.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Properties/launchSettings.json
@@ -18,10 +18,11 @@
     "RapidGuestRegistration.Ui": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
+        "Schlüssel": "Wert",
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
