--- a/.github/workflows/api-integration-test.yml
+++ b/.github/workflows/api-integration-test.yml
@@ -15,6 +15,8 @@ jobs:
       run: docker-compose -f docker-compose.integration-test.yml up --exit-code-from api-test
     - name: Run docker containers for JMeter
       run: docker-compose -f docker-compose.integration-test.yml up -d
+    - name: Run netstat
+      run: netstat -atup
     - name: Run JMeter Tests
       uses: rbhadti94/apache-jmeter-action@v0.3.1
       with:
