--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.Development.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.Development.json
@@ -7,7 +7,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
- 
+  "api": {
+    "mode": "production",
+    "baseUrl": "http://api:8080"
+  },
   "registration": {
     "baseUrl": "http://localhost:5000"
   }
