include Bookings in NavMenu and linked Route

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "api": {
-    "mode": "production",
+    "mode": "mock",
     "baseUrl": "http://api:8080"
   },
   "registration": {
